# P1

./: .gitignore  CMakeLists.txt  Hej.c  Hej.h  README.md  VisualOutput.c
Datafolder/: cords.txt
Src/: VisualoutputAnas.c  VisualoutputAnas.h
Test/: CMakeLists.txt  Tester.c  test-VisMinefelt.c
src/: CMakeLists.txt  GenerateRandomCluster.c  GenerateRandomCluster.h  LowBoundTSP.c  LowBoundTSP.h  VisualOutput.c  VisualOutput.h  bruteforce.c  bruteforce.h  cords.txt  main.c  runFunctions.c  runFunctions.h  scanCords.c  scanCords.h
test/: CMakeLists.txt  TestTextFile.c  TestTextFile.h  test_paths.c
